nw-policy-allow-internet.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internet-access
  namespace: apache
spec:
  podSelector:
    matchLabels:
      app: http
  policyTypes:
  - Ingress
  ingress:
  - {}
