nw-policy-allow-only-external.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external
  namespace: apache
spec:
  podSelector:
    matchLabels:
      app: http
  ingress:
  - from: []
